rustc_codegen_c/src/builder/snapshots/tests__def_fn.snap
---
created: "2019-02-07T00:21:01.105578496Z"
creator: insta@0.6.1
source: rustc_codegen_c/src/builder/mod.rs
expression: out
---
/* generated by r2c2 version 0.0.0 */
#include <stdint.h>
#include <stdbool.h>

/*                                                    */
/*                    END PREAMBLE                    */
/*                                                    */

uint32_t * myfn(uint32_t _1, uint32_t _2, bool _3)
{
}


