rustc_codegen_c/src/builder/snapshots/tests__define_struct_fn_ptr.snap
---
created: "2019-02-07T00:21:01.110978750Z"
creator: insta@0.6.1
source: rustc_codegen_c/src/builder/mod.rs
expression: out
---
/* generated by r2c2 version 0.0.0 */
#include <stdint.h>
#include <stdbool.h>

/*                                                    */
/*                    END PREAMBLE                    */
/*                                                    */

struct my_struct {  /* (test-symbol: no associated Rust name) */
    uint32_t * (*f1)(uint32_t _1, uint32_t _2, bool _3);
    void (*f2)(uint32_t _1, uint32_t _2, bool _3);
    uint32_t (*f3)(void);
};

