rustc_codegen_c/src/builder/snapshots/tests__fwd_declare.snap
---
created: "2019-02-07T00:21:01.105578529Z"
creator: insta@0.6.1
source: rustc_codegen_c/src/builder/mod.rs
expression: out
---
/* generated by r2c2 version 0.0.0 */
#include <stdint.h>
#include <stdbool.h>

/*                                                    */
/*                    END PREAMBLE                    */
/*                                                    */

struct my_struct;  /* (test-symbol: no associated Rust name) */
union my_union;  /* (test-symbol: no associated Rust name) */

