rustc_codegen_c/src/builder/snapshots/tests__fwd_declare_fn.snap
---
created: "2019-02-07T00:21:01.105661406Z"
creator: insta@0.6.1
source: rustc_codegen_c/src/builder/mod.rs
expression: out
---
/* generated by r2c2 version 0.0.0 */
#include <stdint.h>
#include <stdbool.h>

/*                                                    */
/*                    END PREAMBLE                    */
/*                                                    */

uint32_t * myfn(uint32_t _1, uint32_t _2, bool _3); /* (test-symbol: no associated Rust name) */
void empty(void); /* (test-symbol: no associated Rust name) */

